--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
+    "expo": "~50.0.20",
     "expo-av": "~13.10.6",
     "expo-build-properties": "~0.11.1",
     "expo-device": "~5.9.4",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
-    "expo-notifications": "~0.27.7",
+    "expo-notifications": "~0.27.8",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "^6.5.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
@@ -40,7 +41,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
